<resources>
    <string name="app_name">Pocket</string>
    <string name="action_settings">Settings</string>
    <string name="input_store_name">Store Name</string>
    <string name="input_purchase_date">Purchase Date</string>
    <string name="input_last_return_date">Last Return Date</string>
    <string name="description_open_gallery">Open Gallery</string>
    <string name="description_open_camera">Open Camera</string>
    <string name="description_show_image">Show Selected Image</string>
</resources>
