<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context=".DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imgPicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/description_show_image"
            app:srcCompat="@android:drawable/screen_background_light_transparent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/background_dark"
                android:clickable="true"
                android:contentDescription="@string/description_open_camera"
                android:focusable="true"
                android:onClick="onTakePhotoClicked"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/background_dark"
                android:clickable="true"
                android:contentDescription="@string/description_open_gallery"
                android:elevation="15dp"
                android:focusable="true"
                android:hapticFeedbackEnabled="true"
                android:onClick="onImageGalleryClicked"
                android:scaleType="fitCenter"
                app:srcCompat="@android:drawable/ic_menu_gallery" />

        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/etname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="39dp"
                android:ems="10"
                android:hint="@string/input_store_name"
                android:singleLine="true"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="@+id/purchase"
                app:layout_constraintHorizontal_bias="0.372"
                app:layout_constraintStart_toStartOf="@+id/purchase"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/purchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/input_purchase_date"
                android:inputType="date"
                app:layout_constraintEnd_toStartOf="@+id/imageButton"
                app:layout_constraintHorizontal_bias="0.826"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etname" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/holo_blue_light"
                android:elevation="15dp"
                android:onClick="dateMenu1"
                app:layout_constraintBottom_toBottomOf="@+id/purchase"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/purchase"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@android:drawable/ic_menu_my_calendar" />

            <EditText
                android:id="@+id/returnDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/input_last_return_date"
                android:inputType="date"
                app:layout_constraintEnd_toStartOf="@+id/imageButton2"
                app:layout_constraintHorizontal_bias="0.826"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/purchase" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="28dp"
                android:background="@android:color/holo_blue_light"
                android:elevation="15dp"
                android:onClick="dateMenu2"
                app:layout_constraintBottom_toBottomOf="@+id/returnDate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/returnDate"
                app:layout_constraintVertical_bias="0.428"
                app:srcCompat="@android:drawable/ic_menu_my_calendar" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.268"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/returnDate" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="0dp"
                android:text="Description"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.297"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner" />

            <EditText
                android:id="@+id/et_description"
                android:layout_width="213dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:inputType="textMultiLine"
                android:lineSpacingExtra="8sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.527"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"

                android:layout_marginTop="8dp"
                android:elevation="0dp"
                android:hapticFeedbackEnabled="true"
                android:onClick="save"
                android:paddingBottom="15dp"
                android:text="Save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_description" />
            <!--android:background="@android:drawable/checkbox_on_background"-->
            <!--android:backgroundTint="@android:color/holo_green_light"-->

        </android.support.constraint.ConstraintLayout>


    </LinearLayout>

    </ScrollView>